--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
             a.download = 'Rahul-Resume.pdf';
             a.click();
         }
-        document.getElementById("githubBtn").onclick = () => window.open("https://github.com/yourusername", "_blank");
+        document.getElementById("githubBtn").onclick = () => window.open("https://github.com/Rahulsaini356?tab=repositories");
 
         // EmailJS
         (function() {
@@ -552,3 +552,4 @@
 </body>
 
 </html>
+
